<resources>
    <string name="symja_prgm_button_copy">Copy</string>
    <string name="symja_prgm_button_input">Input</string>
    <string name="symja_prgm_button_paste">Paste</string>
    <string name="symja_prgm_button_redo">Redo</string>
    <string name="symja_prgm_button_remove">Remove</string>
    <string name="symja_prgm_button_run">Run</string>
    <string name="symja_prgm_button_share">Share</string>
    <string name="symja_prgm_button_submit">Submit</string>
    <string name="symja_prgm_button_undo">Undo</string>

    <string name="symja_prgm_label_calculation_result">Calculation result</string>
    <string name="symja_prgm_label_format_latex">LaTeX</string>
    <string name="symja_prgm_label_format_text">Text</string>
    <string name="symja_prgm_label_search">Search</string>
    <string name="symja_prgm_label_view_output_error">Output | Error Message</string>
    <string name="symja_prgm_label_need_more_help_contact_us">Need more help? Contact us.</string>

    <string name="symja_prgm_menu_clear_all_items">Clear all items</string>
    <string name="symja_prgm_menu_clear_all_input">Clear input</string>
    <string name="symja_prgm_menu_copy_as_latex">Copy as Latex</string>
    <string name="symja_prgm_menu_copy_input_as">Copy input as [%s]</string>
    <string name="symja_prgm_menu_copy_result_as">Copy result as [%s]</string>
    <string name="symja_prgm_menu_import_text_file">Import text file</string>

    <string name="symja_prgm_message_cannot_import_file">Unable to import file</string>
    <string name="symja_prgm_message_clear_all_items">Did you want to clear all items?</string>
    <string name="symja_prgm_message_copied">Copied</string>
    <string name="symja_prgm_message_drag_to_select_symbol">Drag to select symbol</string>
    <string name="symja_prgm_message_empty_result">There is no result for your input</string>
    <string name="symja_prgm_message_file_too_large">File too large.</string>
    <string name="symja_prgm_message_symjatalk_loading">Sending your request to server. Waiting for response.</string>

    <string name="symja_prgm_tab_title_catalog">Catalog</string>
    <string name="symja_prgm_tab_title_console">Console</string>
    <string name="symja_prgm_tab_title_document">Document</string>
    <string name="symja_prgm_tab_title_tutorials">Tutorials</string>
    <string name="symja_prgm_title_settings">Settings</string>
    <string name="symja_prgm_title_expression_details">Expression details</string>
    <string name="symja_prgm_title_menu_copy_code">Select an item to copy</string>
    <string name="symja_prgm_title_programming">Programming</string>
    <string name="symja_prgm_title_symjatalk">SymjaTalk</string>

    <string name="symja_prgm_error_unknown">Unknown error</string>
</resources>
