...

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calculation_result_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:contentDescription="ResultListView"
            android:fadeScrollbars="false"
            android:paddingBottom="100dp"
            app:fastScrollEnabled="true"
            app:fastScrollHorizontalThumbDrawable="@drawable/symja_prgm_thumb_drawable"
            app:fastScrollHorizontalTrackDrawable="@drawable/symja_prgm_track_drawable"
            app:fastScrollVerticalThumbDrawable="@drawable/symja_prgm_thumb_drawable"
...
